--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
     <p> learning</p>
+    <p> learning 2</p>
   </body>
 </html>
